Ajout cases à cocher Complications

--- a/styles/penombre.less
+++ b/styles/penombre.less
@@ -286,6 +286,25 @@ body {
       .eminence-conscience {
         min-height: 800px;
         color: @color-accent;
+
+        // Cases à cocher
+        .cadre-complications {
+          .images-cases {
+            text-align: right;
+            width: 200px;
+            height: 20px;
+            display: table;
+            flex-direction: line;
+            text-align: right;
+
+            .complication-case {
+              float: left;
+              width: 20px;
+              height: 20px;
+            }
+          }
+        }
+
         // Jetons
         .div-jetons {
           width: 400px;
