--- a/penombre.css
+++ b/penombre.css
@@ -223,6 +223,18 @@ body.theme-dark .penombre.eminence .eminence-content .eminence-timbre .logo-peno
   min-height: 800px;
   color: #917f35;
 }
+.penombre.eminence .eminence-content .eminence-conscience .cadre-complications .images-cases {
+  width: 200px;
+  height: 20px;
+  display: table;
+  flex-direction: line;
+  text-align: right;
+}
+.penombre.eminence .eminence-content .eminence-conscience .cadre-complications .images-cases .complication-case {
+  float: left;
+  width: 20px;
+  height: 20px;
+}
 .penombre.eminence .eminence-content .eminence-conscience .div-jetons {
   width: 400px;
   display: grid;
