--- a/penombre.css
+++ b/penombre.css
@@ -244,22 +244,39 @@ body.theme-dark .penombre.eminence .eminence-content .eminence-timbre .logo-peno
   text-align: center;
 }
 .penombre.eminence .eminence-content .eminence-conscience .cadre-complications {
+  display: table;
+  width: 402px;
   border: 1px solid #917f35;
   border-radius: 4px;
   padding: 2px;
   padding-left: 10px;
 }
-.penombre.eminence .eminence-content .eminence-conscience .cadre-complications .images-cases {
-  width: 200px;
-  height: 20px;
-  display: table;
-  flex-direction: line;
-  text-align: right;
+.penombre.eminence .eminence-content .eminence-conscience .cadre-complications .div-cases {
+  display: flex;
+  width: 390px;
 }
-.penombre.eminence .eminence-content .eminence-conscience .cadre-complications .images-cases .complication-case {
+.penombre.eminence .eminence-content .eminence-conscience .cadre-complications .div-cases label {
+  float: left;
+}
+.penombre.eminence .eminence-content .eminence-conscience .cadre-complications .div-cases .images-cases {
+  display: flex;
+  width: 250px;
+  height: 20px;
+  float: left;
+  flex-direction: line;
+  justify-content: right;
+}
+.penombre.eminence .eminence-content .eminence-conscience .cadre-complications .div-cases .images-cases .complication-case {
   float: left;
   width: 20px;
   height: 20px;
+}
+.penombre.eminence .eminence-content .eminence-conscience .cadre-complications .div-cases .images-cases .complication-case:hover {
+  cursor: pointer;
+  /*
+                  -webkit-filter: drop-shadow(0px 0px 6px #af010a);
+                  filter: drop-shadow(0px 0px 6px #af010a);
+                  */
 }
 .penombre.eminence .eminence-content .eminence-harmoniques {
   color: #56605b;
