--- a/templates/eminence/partials/pouvoirs.hbs
+++ b/templates/eminence/partials/pouvoirs.hbs
@@ -1,11 +1,19 @@
 {{log "EminenceSheet - Partials - Pouvoirs" this }}
 <div class="eminence-pouvoirs">
-    <h1>Pouvoirs</h1>
+    <span class="titre-section-pouvoirs">{{localize "PENOMBRE.ui.pouvoirs"}}</span>
     <div class="content">
         <div class="potentiel">
+            {{#if unlocked}}
             {{formGroup systemFields.potentiel.fields.pouvoirs value=systemSource.potentiel.pouvoirs localize=true disabled=locked}}
+            {{else}}
+            <div class="div-potentiel">
+                <span class="absolue">{{localize "PENOMBRE.ui.potentiel"}}</span>
+                <div class="val-potentiel absolue">{{system.potentiel.pouvoirs}}</div>
+                <img class="img-potentiel absolue" src="systems/penombre/assets/ui/potentiel_creux.png" alt="|" />
+            </div>
+            {{/if}}
         </div>
-        <div class="pouvoirs">
+        <div class="pouvoirs absolue">
             {{#each pouvoirs as |pouvoir|}}
                 {{log 'pouvoir' pouvoir }}
                 <input type="checkbox" {{#if pouvoir.system.utilise}}checked{{/if}}></input>
