--- a/styles/penombre.less
+++ b/styles/penombre.less
@@ -458,6 +458,7 @@ body {
           .potentiel {
 
             .div-potentiel {
+              position: relative;
               text-align: center;
               width: 100px;
               height: 200px;
@@ -483,6 +484,7 @@ body {
               span {
                 margin-left: -42px;
                 margin-top: 90px;
+                color: @color-primary;
                 font-size: @font-size-large;
               }
             }
