--- a/templates/eminence/partials/timbre.hbs
+++ b/templates/eminence/partials/timbre.hbs
@@ -4,6 +4,7 @@
     {{formGroup systemFields.timbre.fields.statut value=systemSource.timbre.statut localize=true}}
     {{formGroup systemFields.timbre.fields.peste value=systemSource.timbre.peste localize=true}}
   {{else}}
-    <img class="logo-penombre" ></img>
+    <img class="frise-penombre"></img>
+    <img class="logo-penombre"></img>
   {{/if}}
 </div>
