--- a/templates/eminence/partials/harmoniques.hbs
+++ b/templates/eminence/partials/harmoniques.hbs
@@ -6,15 +6,17 @@
   </div>
   <div class="col-3-1 flexible">
     {{#if unlocked}}
-      <div class="col-1-2">
+      <div class="rang-1-2">
+        <div class="col-choix-des">
         {{formGroup systemFields.harmoniques.fields.ame.fields.valeur value=systemSource.harmoniques.ame.valeur localize=true}}
         {{formGroup systemFields.harmoniques.fields.esprit.fields.valeur value=systemSource.harmoniques.esprit.valeur localize=true}}
         {{formGroup systemFields.harmoniques.fields.etincelle.fields.valeur value=systemSource.harmoniques.etincelle.valeur localize=true}}
         {{formGroup systemFields.harmoniques.fields.nature.fields.valeur value=systemSource.harmoniques.nature.valeur localize=true}}
         {{formGroup systemFields.harmoniques.fields.nuit.fields.valeur value=systemSource.harmoniques.nuit.valeur localize=true}}
+        </div>
       </div>
     {{/if}}
-    <div class="col-2-2 flexible">
+    <div class="rang-2-2 flexible">
       <table class="table-de flexible">
         <tr class="tr-de flexible">
           <td class="flexible" data-tooltip="{{localize 'PENOMBRE.ui.actionScelerate'}}">
