--- a/templates/eminence/partials/maitrises.hbs
+++ b/templates/eminence/partials/maitrises.hbs
@@ -1,2 +1,27 @@
+{{log "EminenceSheet - Partials - Maîtrises" this }}
 <div class="eminence-maitrises">
+    <span class="titre-section-maitrises">{{localize "PENOMBRE.ui.maitrises"}}</span>
+    <div class="content">
+        <div class="potentiel">
+            {{#if unlocked}}
+            {{formGroup systemFields.potentiel.fields.maitrises value=systemSource.potentiel.maitrises localize=true disabled=locked}}
+            {{else}}
+            <div class="div-potentiel">
+                <span class="absolue">{{localize "PENOMBRE.ui.potentiel"}}</span>
+                <div class="val-potentiel absolue">{{system.potentiel.maitrises}}</div>
+                <img class="img-potentiel absolue" src="systems/penombre/assets/ui/potentiel_creux.png" alt="|" />
+            </div>
+            {{/if}}
+        </div>
+        <div class="maitrises absolue">
+            {{#each maitrises as |maitrise|}}
+                {{log 'maitrise' maitrise }}
+                <input type="checkbox" {{#if maitrise.system.utilise}}checked{{/if}}></input>
+                <label>{{maitrise.name}}</label>                
+                {{maitrise.system.description}}
+                {{maitrise.system.type}}
+                <br>
+            {{/each}}
+        </div>
+    </div>
 </div>
