--- a/styles/penombre.less
+++ b/styles/penombre.less
@@ -307,7 +307,7 @@ body {
 
             // Section conscience
       .eminence-conscience {
-        min-height: 800px;
+        min-height: 785px;
         color: @color-accent;
 
 
@@ -477,8 +477,9 @@ body {
 
       // Section Pouvoirs
       .eminence-pouvoirs {
-        min-height: 500px;
+        min-height: 400px;
         color: @color-secondary;
+        text-align: center;
 
         .titre-section-pouvoirs {
           font-size: @font-size-2xlarge;
@@ -490,6 +491,7 @@ body {
 
             .div-potentiel {
               position: relative;
+              float: left;
               text-align: center;
               width: 100px;
               height: 200px;
@@ -497,7 +499,6 @@ body {
               .img-potentiel {
                 width: 100px;
                 height: 100px;
-
               }
             
               .absolue {
@@ -509,7 +510,6 @@ body {
                 margin-left: 45px;
                 margin-top: 42px;
                 font-size: @font-size-large;
-
               }
 
               span {
@@ -522,10 +522,130 @@ body {
           }
 
           .pouvoirs {
-            float: none;
+            float: left;
+            width: 517px;
+            min-height: 290px;
+            border: 1px solid #917f35;
+            border-radius: @border-radius-small;
+            padding: 2px;
           }
         }
       }
+
+      // Section Atouts
+      .eminence-atouts {
+        min-height: 400px;
+        color: @color-secondary;
+        text-align: center;
+
+        .titre-section-atouts {
+          font-size: @font-size-2xlarge;
+          float: none;
+        }
+
+        .content {
+          .potentiel {
+
+            .div-potentiel {
+              position: relative;
+              float: left;
+              text-align: center;
+              width: 100px;
+              height: 200px;
+
+              .img-potentiel {
+                width: 100px;
+                height: 100px;
+              }
+            
+              .absolue {
+                position: absolute;
+                z-index: 5;
+              }
+
+              .val-potentiel {
+                margin-left: 45px;
+                margin-top: 42px;
+                font-size: @font-size-large;
+              }
+
+              span {
+                margin-left: -42px;
+                margin-top: 90px;
+                color: @color-primary;
+                font-size: @font-size-large;
+              }
+            }
+          }
+
+          .atouts {
+            float: left;
+            width: 517px;
+            min-height: 290px;
+            border: 1px solid #917f35;
+            border-radius: @border-radius-small;
+            padding: 2px;
+          }
+        }
+      }
+
+      // Section Maîtrises
+      .eminence-maitrises {
+        min-height: 400px;
+        color: @color-secondary;
+        text-align: center;
+
+        .titre-section-maitrises {
+          font-size: @font-size-2xlarge;
+          float: none;
+        }
+
+        .content {
+          .potentiel {
+
+            .div-potentiel {
+              position: relative;
+              float: left;
+              text-align: center;
+              width: 100px;
+              height: 200px;
+
+              .img-potentiel {
+                width: 100px;
+                height: 100px;
+              }
+            
+              .absolue {
+                position: absolute;
+                z-index: 5;
+              }
+
+              .val-potentiel {
+                margin-left: 45px;
+                margin-top: 42px;
+                font-size: @font-size-large;
+              }
+
+              span {
+                margin-left: -42px;
+                margin-top: 90px;
+                color: @color-primary;
+                font-size: @font-size-large;
+              }
+            }
+          }
+
+          .maitrises {
+            float: left;
+            width: 517px;
+            min-height: 290px;
+            border: 1px solid #917f35;
+            border-radius: @border-radius-small;
+            padding: 2px;
+          }
+        }
+      }
+
     }
   }
 }
