--- a/styles/penombre.less
+++ b/styles/penombre.less
@@ -334,7 +334,7 @@ body {
           }
         }
 
-        .cadre-complications {
+        .cadre-complications-2 {
           display: table;
           width: 402px;
           border: 1px solid #917f35;
@@ -365,12 +365,64 @@ body {
                 width: 20px;
                 height: 20px;
 
-                &:hover {
-                  cursor: pointer;
-                  /*
-                  -webkit-filter: drop-shadow(0px 0px 6px #af010a);
-                  filter: drop-shadow(0px 0px 6px #af010a);
-                  */
+              }
+            }
+          }
+        }
+
+        .cadre-complications {
+          display: table;
+          width: 402px;
+          border: 1px solid #917f35;
+          border-radius: @border-radius-small;
+          padding: 2px;
+          padding-left: 10px;
+
+          label {
+            width: 402px;
+            float: none;
+            clear: both;
+          }
+
+          .ligne-complication {
+            display: flex;
+            float: none;
+            clear: both;
+
+
+            .div-descriptions {
+              // float: left;
+              width: 320px;
+            }
+
+            // Cases à cocher
+            .div-cases {
+              float: left;
+              display: flex;
+              width: 70px;
+
+              // justify-content: space-between;
+
+              .images-cases {
+                display: flex;
+                width: 70px;
+                height: 20px;
+                float: left;
+                flex-direction: line;
+                justify-content: right;
+
+                .complication-case {
+                  float: left;
+                  width: 20px;
+                  height: 20px;
+
+                  &:hover {
+                    cursor: pointer;
+                    /*
+                    -webkit-filter: drop-shadow(0px 0px 6px #af010a);
+                    filter: drop-shadow(0px 0px 6px #af010a);
+                    */
+                  }
                 }
               }
             }
