--- a/templates/eminence/partials/conscience.hbs
+++ b/templates/eminence/partials/conscience.hbs
@@ -9,17 +9,41 @@
       {{#if unlocked}}
 
         <!-- Conscience -->
-        {{formGroup systemFields.conscience.fields.valeur value=systemSource.conscience.valeur localize=true}}
-        {{formGroup systemFields.conscience.fields.max value=systemSource.conscience.max localize=true}}
+          {{formGroup systemFields.conscience.fields.valeur value=systemSource.conscience.valeur localize=true}}
+          {{formGroup systemFields.conscience.fields.max value=systemSource.conscience.max localize=true}}
 
         <!-- Complications -->
-        <p>{{localize "PENOMBRE.ui.complicationsListe"}}</p>
-        <div class="cadre-complications">
-          <label>{{localize "PENOMBRE.ui.complications.decrivezPoints"}}</label>
           {{formGroup systemFields.conscience.fields.complications.fields.une.fields.description value=systemSource.conscience.complications.une.description localize=true}}
           {{formGroup systemFields.conscience.fields.complications.fields.deux.fields.description value=systemSource.conscience.complications.deux.description localize=true}}
           {{formGroup systemFields.conscience.fields.complications.fields.trois.fields.description value=systemSource.conscience.complications.trois.description localize=true}}
           {{formGroup systemFields.conscience.fields.complications.fields.quatre.fields.description value=systemSource.conscience.complications.quatre.description localize=true}}
+
+
+          <p>{{localize "PENOMBRE.ui.complicationsListe"}}</p>
+          <div class="cadre-complications-2">
+            <label>{{localize "PENOMBRE.ui.complications.decrivezPoints"}}</label>
+            {{#each system.conscience.complications as |complication id|}}
+
+              <div class="form-group">
+                <label>{{localize (concat "PENOMBRE.ui.complications.description." id)}}</label>
+
+                <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+
+                Intégrer ici une des 4 lignes Complications, au-dessus, au &each : je ne sais pas comment faire
+
+                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
+
+              </div>
+              <div class="form-group div-cases">
+                <label>{{localize "PENOMBRE.ui.complications.valeur"}}</label>
+                <div class="images-cases">
+                  <!-- id : une, deux, trois, quatre ; @index : 1, 2, 3 -->
+                  {{#times 3}}
+                    <img class="complication-case" data-action="complication" data-complication="{{id}}" data-index="{{@index}}" src="systems/penombre/assets/ui/transp_case_{{#if (gte complication.valeur @index)}}checked{{else}}unchecked{{/if}}.png"></img>
+                  {{/times}}
+                </div>
+              </div>
+            {{/each}}
         </div>
 
       {{else}}
@@ -38,17 +62,18 @@
         <p>{{localize "PENOMBRE.ui.complicationsListe"}}</p>
         <div class="cadre-complications">
           {{#each system.conscience.complications as |complication id|}}
-            <div class="form-group">
-              <label>{{localize (concat "PENOMBRE.ui.complications.description." id)}}</label>
-              <div class="form-fields">{{complication.description}}</div>
-            </div>
-            <div class="form-group div-cases">
-              <label>{{localize "PENOMBRE.ui.complications.valeur"}}</label>
-              <div class="images-cases">
-                <!-- id : une, deux, trois, quatre ; @index : 1, 2, 3 -->
-                {{#times 3}}
-                  <img class="complication-case" data-action="complication" data-complication="{{id}}" data-index="{{@index}}" src="systems/penombre/assets/ui/transp_case_{{#if (gte complication.valeur @index)}}checked{{else}}unchecked{{/if}}.png"></img>
-                {{/times}}
+            <label>{{localize (concat "PENOMBRE.ui.complications.description." id)}}</label>
+            <div class="ligne-complication">
+              <div class="form-group div-descriptions">
+                <div class="form-fields">{{complication.description}}</div>
+              </div>
+              <div class="form-group div-cases">
+                <div class="images-cases">
+                  <!-- id : une, deux, trois, quatre ; @index : 1, 2, 3 -->
+                  {{#times 3}}
+                    <img class="complication-case-2" src="systems/penombre/assets/ui/transp_case_{{#if (gte complication.valeur @index)}}checked{{else}}unchecked{{/if}}.png"></img>
+                  {{/times}}
+                </div>
               </div>
             </div>
           {{/each}}
